[REFACTOR] 스크랩한 게시글 조회의 응답 형식 수정